test/fail/prog-t-empty.rnp
# Flags: return-type=NUMBER
---
 --> fail/prog-t-empty.rnp:2:1
  |
2 | 
  |  Program expected number but got void
  |
